rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/snapshots/cubesqlplanner__tests__integration__advanced_features__second_granularity.snap
---
source: cubesqlplanner/src/tests/integration/advanced_features.rs
expression: result
---
orders__created_at_second | orders__count
--------------------------+--------------
2024-01-15 10:00:00       | 1            
2024-01-15 15:00:00       | 1
