rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/snapshots/cubesqlplanner__tests__integration__advanced_features__string_measure.snap
---
source: cubesqlplanner/src/tests/integration/advanced_features.rs
expression: result
---
orders__status_summary
----------------------
high
