rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/snapshots/cubesqlplanner__tests__integration__advanced_features__string_measure_with_dim.snap
---
source: cubesqlplanner/src/tests/integration/advanced_features.rs
expression: result
---
customers__city | orders__status_summary
----------------+-----------------------
Boston          | low                   
New York        | high                  
San Francisco   | low                   
NULL            | low
