rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/snapshots/cubesqlplanner__tests__integration__advanced_features__ungrouped_filtered_measure.snap
---
source: cubesqlplanner/src/tests/integration/advanced_features.rs
expression: result
---
orders__id | orders__status | orders__completed_count
-----------+----------------+------------------------
1          | completed      | 1                      
2          | completed      | 1                      
3          | pending        | NULL                   
4          | completed      | 1                      
5          | cancelled      | NULL                   
6          | completed      | 1                      
7          | pending        | NULL                   
8          | completed      | 1                      
9          | pending        | NULL
