rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/snapshots/cubesqlplanner__tests__integration__advanced_features__ungrouped_ratio_measure.snap
---
source: cubesqlplanner/src/tests/integration/advanced_features.rs
expression: result
---
orders__id | orders__status | orders__amount | orders__avg_order_value
-----------+----------------+----------------+------------------------
1          | completed      | 100.00         | 100.0000000000000000   
2          | completed      | 200.00         | 200.0000000000000000   
3          | pending        | 50.00          | 50.0000000000000000    
4          | completed      | 300.00         | 300.0000000000000000   
5          | cancelled      | 25.00          | 25.0000000000000000    
6          | completed      | 150.00         | 150.0000000000000000   
7          | pending        | 75.00          | 75.0000000000000000    
8          | completed      | 500.00         | 500.0000000000000000   
9          | pending        | 40.00          | 40.0000000000000000
